--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,6 +51,6 @@
     "constructs": "^10.3.0",
     "esbuild": "^0.21.5",
     "tsx": "^4.15.6",
-    "typescript": "^5.4.5"
+    "typescript": "^4.9.5"
   }
 }
