--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/node": "^16.18.100",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "aws-amplify": "^6.3.7",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.3",
     "@aws-amplify/backend-cli": "^1.0.4",
+    "@types/react-bootstrap": "^0.32.36",
     "aws-cdk": "^2.146.0",
     "aws-cdk-lib": "^2.146.0",
     "constructs": "^10.3.0",
